syntax = "proto3";

package meta.v1;

// Общие мета-данные для всех запросов
message Meta {
  string request_id = 1;
  string user_agent = 2;
  string source_ip = 3;
  int64 timestamp = 4;
  map<string, string> headers = 5;
}

// Общий ответ с мета-информацией
message MetaResponse {
  Meta meta = 1;
  string status = 2;
  string message = 3;
}